added rest of CRUD operations to listing
